--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java-library'
 }
 
+group 'ru.antipant'
+version '1.0'
+
 repositories {
     mavenCentral()
 }
@@ -10,8 +13,16 @@ dependencies {
     testImplementation(
             "com.codeborne:selenide:6.4.0",
             "org.junit.jupiter:junit-jupiter:5.8.2",
-            "org.slf4j:slf4j-simple:1.7.36"
+            "org.slf4j:slf4j-simple:1.7.36",
+            "org.assertj:assertj-core:3.22.0",
+            "org.hamcrest:hamcrest-all:1.3",
+            "com.codeborne:pdf-test:1.7.0",
+            "com.codeborne:xls-test:1.4.0",
+            "com.opencsv:opencsv:5.6"
     )
+    testImplementation ('com.codeborne:pdf-test:1.7.0') {
+        exclude group: 'org.apache.poi'
+    }
 }
 compileJava {
     options.encoding = 'UTF-8'
