--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
             "org.hamcrest:hamcrest-all:1.3",
             "com.codeborne:pdf-test:1.7.0",
             "com.codeborne:xls-test:1.4.0",
-            "com.opencsv:opencsv:5.6"
+            "com.opencsv:opencsv:5.6",
+            "com.google.code.gson:gson:2.9.0",
+            "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.13.2"
     )
     testImplementation ('com.codeborne:pdf-test:1.7.0') {
         exclude group: 'org.apache.poi'
